--- a/sprite.html
+++ b/sprite.html
@@ -13,7 +13,7 @@
         /* Setting the background for #frame to the sprite sheet; you can read more about this approach at http://blog.teamtreehouse.com/css-sprite-sheet-animations-steps */
 	    background: url(https://s3.amazonaws.com/dgmde15githubio/bakhtiar-wavesheet.png) left top; 
     }
-    /* This is where the animation happens: it tells us to run wave-animate in 10 steps, which moves the background position from 0 to -500px, and does this animation when we hover over #frame */;
+    /* This is where the animation happens: it tells us to run wave-animate in 10 steps, which moves the background position from 0 to -500px, and does this animation when we hover over #frame */
     #frame:hover {
         -webkit-animation: wave-animate 1s steps(10);
     }
